fix: Fix snapshot and horizontal scroll in wide emails

--- a/app/src/main/res/raw/style.css
+++ b/app/src/main/res/raw/style.css
@@ -5,8 +5,6 @@ html {
 
 body {
     font-family: 'Helvetica';
-    margin: 16px;
-    padding: 0;
     width: auto !important;
     min-width: auto !important;
 }
